--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+h1, h2, h3, h4, p, button {
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Khula', sans-serif;
+  --primary: #1539CF;
 }
 
 a {
@@ -14,3 +19,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+section {
+  max-width: 78rem;
+  margin: auto;
+}
+
