--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -1,18 +1,32 @@
 .section {
-    padding-top: 8.125rem;
+    padding-top: 4.5rem;
 }
 
 .h1 {
-    font-size: 3.5em;
+    font-size: 2.5em;
     margin-bottom: 2rem;
     margin-top: 0;
     font-weight: 700;
 }
 
 .h2 {
-    font-size: 1.875em;
+    font-size: 1.2em;
     margin-top: 0;
     margin-bottom: 1.5rem;
     font-weight: 400;
 }
 
+
+@media screen and (min-width: 600px) {
+    .section {
+        padding-top: 8.125rem;
+    }
+    
+    .h1 {
+        font-size: 3.5em;
+    }
+    
+    .h2 {
+        font-size: 1.875em;
+    }
+}
