--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,10 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Khula', sans-serif;
+  width: 100%;
+  overflow-y: auto;
   --primary: #1539CF;
+
 }
 
 a {
