--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,8 @@ body {
   margin: 0;
   font-family: 'Khula', sans-serif;
   width: 100%;
-  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100%;
   --primary: #1539CF;
 
 }
