--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -13,8 +13,7 @@
 }
 
 .footer > div > div {
-    padding-right: 10%;
-    min-width: 400px;
+    min-width: 100%;
     width: 50%;
     flex-grow: 1;
 }
@@ -29,6 +28,11 @@
     font-size: 1.25em;
     color: #5F6B94;
     font-weight: 600;
+    margin-bottom: 3rem;
+}
+
+.footer p:last-of-type {
+    margin-bottom: 1rem;
 }
 
 .footer ul {
@@ -37,7 +41,11 @@
 }
 
 .info {
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
+}
+
+.info li {
+    margin-bottom: 0.75rem;
 }
 
 .links {
@@ -46,7 +54,7 @@
 }
 
 .links li {
-    margin-right: 0.75rem;
+    margin-right: 1rem;
 }
 
 
@@ -56,7 +64,6 @@
     align-items: stretch;
     max-width: 460px;
 }
-
 
 .formContainer h4 {
     font-size: 1.875em;
@@ -80,6 +87,14 @@
     padding: 0.75rem;
     
 }
+
+@media screen and (min-width: 500px) {
+    .footer > div > div {
+        min-width: 400px;
+        padding-right: 10%;
+    }
+}
+
 
 @media screen and (min-width: 1200px) {
     .footer > div {
