--- a/components/ProjectModal/ProjectModal.module.css
+++ b/components/ProjectModal/ProjectModal.module.css
@@ -1,38 +1,51 @@
-.article {
-    width: 500px;
-    height: 712px;
-    border-radius: 20px;
-    box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.17);
+.container {
     display: flex;
     flex-direction: column;
 }
 
-.article > div {
-    padding: 1rem 2.18rem 2.18rem 2.18rem;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.article h6 {
-    font-size: 1.625rem;
-    color: #00000091;
-    margin-bottom: 1.4rem;
-}
-.article p {
-    font-size: 1.625rem;
-    font-weight: 600;
-}
-
-.article button {
-    margin-top: auto;
-    min-width: 150px;
-    font-size: 1.125em;
+.container button {
+    outline: none;
+    align-self: flex-end;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 }
 
 .image {
     width: 100%;
     height: 60%;
     object-fit: contain;
+}
+
+.info {
+    padding: 0 2rem;
+}
+
+.info > div {
+    display: flex;
+}
+
+.info h6 {
+    font-size: 1.6rem;
+    color: #00000091;
+    margin-bottom: 0.6rem;
+}
+
+.info p {
+    margin-bottom: 0.2rem;
+}
+
+.info p:last-of-type {
+    margin-bottom: 2rem;
+}
+
+.info a {
+    color: var(--primary);
+    line-height: 1.2;
+    font-weight: 600;
+}
+
+.info a:hover {
+    text-decoration: underline;
 }
