--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -1,6 +1,8 @@
 .article {
     width: 500px;
-    height: 712px;
+    max-width: 100%;
+    height: 550px;
+    justify-self: center;
     border-radius: 20px;
     box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.17);
     display: flex;
@@ -16,13 +18,14 @@
 }
 
 .article h6 {
-    font-size: 1.625rem;
+    font-size: 1.4rem;
     color: #00000091;
-    margin-bottom: 1.4rem;
+    margin-bottom: 0.8rem;
 }
 .article p {
-    font-size: 1.625rem;
+    font-size: 1.2rem;
     font-weight: 600;
+    margin-bottom: 1rem;
 }
 
 .article button {
@@ -35,4 +38,17 @@
     width: 100%;
     height: 60%;
     object-fit: contain;
+}
+
+@media screen and (min-width: 600px) {
+    .article {
+        height: 712px;
+    }
+    .article h6 {
+        font-size: 1.625rem;
+        margin-bottom: 1.4rem;
+    }
+    .article p {
+        font-size: 1.625rem;
+    }
 }
