--- a/components/ProjectModal/ProjectModal.module.css
+++ b/components/ProjectModal/ProjectModal.module.css
@@ -1,15 +1,17 @@
 .container {
     display: flex;
     flex-direction: column;
+    padding: 2rem 0;
 }
 
-.container button {
+.closeBtn {
     outline: none;
     align-self: flex-end;
     background: none;
     border: none;
     padding: 0;
     cursor: pointer;
+    margin-right: 1rem;
 }
 
 .image {
@@ -49,4 +51,12 @@
 
 .info a:hover {
     text-decoration: underline;
+}
+
+@media screen and (min-width: 600px) {
+
+    .container {
+        padding: 2rem;
+    }
+    
 }
