--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -48,6 +48,10 @@
     margin-bottom: 0.75rem;
 }
 
+.info span {
+    margin-left: 0.325rem;
+}
+
 .links {
     display: flex;
     align-items: center;
