--- a/components/Intro/Intro.module.css
+++ b/components/Intro/Intro.module.css
@@ -29,6 +29,14 @@
     line-height: 1.6em;
 }
 
+.p a {
+    color: var(--primary);
+}
+
+.p a:hover {
+    color: var(--secondary);
+}
+
 .p:last-of-type {
     margin-bottom: 5rem;
 }
