--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -17,6 +17,7 @@
     padding: 0;
     margin-left: auto;
     display: flex;
+    align-items: center;
     font-size: 1.375em;
     font-weight: 600;
 }
@@ -90,7 +91,7 @@
     }
     .ul {
         position: absolute;
-        width: 200px;
+        width: 250px;
         padding: 1.5rem;
         border-radius: 20px;
         box-shadow: 0 2px 27px rgb(0 0 0 / 8%);
