--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -7,6 +7,7 @@
     box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.17);
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .article > div {
