--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -38,7 +38,8 @@
 .image {
     width: 100%;
     height: 60%;
-    object-fit: contain;
+    object-fit: cover;
+    object-position: top;
 }
 
 @media screen and (min-width: 600px) {
