--- a/components/ProjectModal/ProjectModal.module.css
+++ b/components/ProjectModal/ProjectModal.module.css
@@ -17,7 +17,6 @@
 .image {
     width: 100%;
     height: 60%;
-    object-fit: contain;
 }
 
 .info {
@@ -51,6 +50,10 @@
 
 .info a:hover {
     text-decoration: underline;
+}
+
+.githubLink {
+    margin-left: auto;
 }
 
 @media screen and (min-width: 600px) {
