--- a/components/Projects/Projects.module.css
+++ b/components/Projects/Projects.module.css
@@ -15,12 +15,43 @@
     grid-column-gap: 2rem;
 }
 
+.githubLink {
+    text-align: center;
+    padding: 1.4rem 1rem;
+    background-color: black;
+    color: #fff;
+    fill: #fff;
+    margin: 6rem auto 2rem auto;
+    display: flex;
+    align-items: center;
+    max-width: 300px;
+    justify-content: center;
+    border-radius: 100px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: all 200ms linear;
+    font-weight: 700;
+}
+.githubLink:hover {
+    color: black;
+    background-color: #fff;
+    fill: black;
+}
+
+.githubLink span {
+    margin-left: 0.5rem;
+}
+
 @media screen and (min-width: 600px) {
 
     .projects {
         grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
         grid-row-gap: 4rem;
         grid-column-gap: 0;
+    }
+
+    .githubLink {
+        margin-bottom: 6rem;
     }
     
 }
