Fix some dependency issues

--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -1,54 +1,51 @@
 .article {
-    width: 280px;
-    /* height: 330px; */
-    background-color: var(--primary);
-    color: #fff;
-    border-radius: 20px;
-    padding: 1rem;
-    margin-left: 1.6rem;
-    flex-shrink: 0;
+  width: 280px;
+  background-color: var(--primary);
+  color: #fff;
+  border-radius: 20px;
+  padding: 1rem;
+  margin-left: 1.6rem;
+  flex-shrink: 0;
 }
 
 .article:first-of-type {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .icons {
-    display: flex;
-    align-items: center;
-    margin-top: 3rem;
-    margin-bottom: 1.4rem;
+  display: flex;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 1.4rem;
 }
 
-.icons > div {
-    margin-right: 1rem!important;
+.icons > img {
+  margin-right: 1rem !important;
 }
 
 .h4 {
-    font-size: 1.5em;
-    margin-bottom: 0.75rem;
-    font-weight: 600;
+  font-size: 1.5em;
+  margin-bottom: 0.75rem;
+  font-weight: 600;
 }
 
 .p {
-    font-weight: 500;
+  font-weight: 500;
 }
 
-
 @media screen and (min-width: 600px) {
-    .article {
-        width: 340px;
-        height: 376px;
-        margin-left: 3rem;
-    }
-    
-    .icons {
-        margin-top: 5rem;
-        margin-bottom: 2.37rem;
-    }
-    
-    .icons > div {
-        margin-right: 1.125rem!important;
-    }
-    
+  .article {
+    width: 340px;
+    height: 376px;
+    margin-left: 3rem;
+  }
+
+  .icons {
+    margin-top: 5rem;
+    margin-bottom: 2.37rem;
+  }
+
+  .icons > img {
+    margin-right: 1.125rem !important;
+  }
 }
