--- a/components/Intro/Intro.module.css
+++ b/components/Intro/Intro.module.css
@@ -1,74 +1,74 @@
 .section {
-    margin-bottom: 3rem;
-    padding-top: 6rem;
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+  margin-bottom: 3rem;
+  padding-top: 6rem;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 90%;
 }
 
-.h3, .h4  {
-    font-weight: 600;
-    font-size: 1.875em;
-    margin-bottom: 2rem;
+.h3,
+.h4 {
+  font-weight: 600;
+  font-size: 1.875em;
+  margin-bottom: 2rem;
 }
 
 .h4 {
-    max-width: 90%;
-    margin: 0 auto 2rem auto;
-} 
+  max-width: 90%;
+  margin: 0 auto 2rem auto;
+}
 
 .p {
-    font-size: 1.25em;
-    margin-bottom: 1.25rem;
-    line-height: 1.6em;
+  font-size: 1.25em;
+  margin-bottom: 1.25rem;
+  line-height: 1.6em;
 }
 
 .p a {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .p a:hover {
-    color: var(--secondary);
+  color: var(--secondary);
 }
 
 .p:last-of-type {
-    margin-bottom: 5rem;
+  margin-bottom: 5rem;
 }
 
 @media screen and (min-width: 600px) {
-    .section {
-        margin-bottom: 3rem;
-        padding-top: 12.5rem;
-        max-width: 90%;
-    }
+  .section {
+    margin-bottom: 3rem;
+    padding-top: 12.5rem;
+    max-width: 90%;
+  }
 
-    .container {
-        max-width: 40rem;
-        margin-left: unset;
-        margin-right: unset;
-    }
+  .container {
+    max-width: 40rem;
+    margin-left: unset;
+    margin-right: unset;
+  }
 
-    .h4 {
-        max-width: 100%;
-        margin: 0 0 2rem 0;
-    } 
+  .h4 {
+    max-width: 100%;
+    margin: 0 0 2rem 0;
+  }
 }
 
-
 @media screen and (min-width: 1200px) {
-    .section {
-      max-width: 72rem;
-    }
+  .section {
+    max-width: 72rem;
   }
-  
-  @media screen and (min-width: 1300px) {
-    .section {
-      max-width: 78rem;
-    }
+}
+
+@media screen and (min-width: 1300px) {
+  .section {
+    max-width: 78rem;
   }
+}
